chatbot-service/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lims-chatbot-service
  namespace: thanes-lims
spec:
  type: ClusterIP
  selector:
    app: lims-chatbot-service
  ports:
    - name: http
      port: 80
      targetPort: http
